play and pause button implemented and working fine

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 07 15:00:04 BDT 2024
-sdk.dir=F\:\\Android Studio\\Android Studio
+#Fri Apr 19 14:59:56 BDT 2024
+sdk.dir=/Users/iqbalmahamud/Library/Android/sdk
